--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -14,8 +14,7 @@
     </head>
     <body>
 
-        <script>
-            console.log("Hello World")
+        <script src="/rock-paper-scissors.js">
         </script>
     </body>
 
