--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <script src="/rock-paper-scissors.js">
+        <script src="rock-paper-scissors.js" defer>
         </script>
     </body>
 
