--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Rock Paper Scissors Game"> 
         <meta name="author" content="Yuniel Reyes">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/repos/Project-Rock-Paper-Scissors/style.css">
+        <link rel="stylesheet" href="style.css">
         <title></title>
         <!-- Identify three ways to include JavaScript in a page.
         1. Through a n external file: <script src="script.js"></script>
@@ -92,7 +92,7 @@
 
 
 
-        <script src="/repos/Project-Rock-Paper-Scissors/rock-paper-scissors.js">
+        <script src="rock-paper-scissors.js">
         </script>
     </body>
 
