--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
         <div id="results-image-box">
             <div id="player-box">
                 <div id="player-rock-box">
-                    <img src="/repos/Project-Rock-Paper-Scissors/rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
+                    <img src="rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
                 </div>
                 <div id="player-paper-box">
-                    <img id="paper-image" src="/repos/Project-Rock-Paper-Scissors/rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
+                    <img id="paper-image" src="rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
                 </div>
                 <div id="player-scissors-box">
-                    <img src="/repos/Project-Rock-Paper-Scissors/rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
+                    <img src="rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
                 </div>
             </div>  
 
             <div id="computer-box">
                 <div id="computer-rock-box">
-                    <img src="/repos/Project-Rock-Paper-Scissors/rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
+                    <img src="rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
                 </div>
                 <div id="computer-paper-box">
-                    <img id="paper-image" src="/repos/Project-Rock-Paper-Scissors/rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
+                    <img id="paper-image" src="rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
                 </div>
                 <div id="computer-scissors-box">
-                    <img src="/repos/Project-Rock-Paper-Scissors/rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
+                    <img src="rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
                 </div>
             </div>
         </div>
