--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
         <div id="results-image-box">
             <div id="player-box">
                 <div id="player-rock-box">
-                    <img src="rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
+                    <img src="fist (voted).png" width="300" alt="chose-rock"/>
                 </div>
                 <div id="player-paper-box">
-                    <img id="paper-image" src="rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
+                    <img id="paper-image" src="palm-voted.png" width="300" alt="chose-paper"/>                    
                 </div>
                 <div id="player-scissors-box">
-                    <img src="rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
+                    <img src="scissors(voted).png" width="300" alt="chose-scissors"/>                    
                 </div>
             </div>  
 
             <div id="computer-box">
                 <div id="computer-rock-box">
-                    <img src="rpc-images/fist (voted).png" width="300" alt="chose-rock"/>
+                    <img src="fist (voted).png" width="300" alt="chose-rock"/>
                 </div>
                 <div id="computer-paper-box">
-                    <img id="paper-image" src="rpc-images/palm-voted.png" width="300" alt="chose-paper"/>                    
+                    <img id="paper-image" src="palm-voted.png" width="300" alt="chose-paper"/>                    
                 </div>
                 <div id="computer-scissors-box">
-                    <img src="rpc-images/scissors(voted).png" width="300" alt="chose-scissors"/>                    
+                    <img src="scissors(voted).png" width="300" alt="chose-scissors"/>                    
                 </div>
             </div>
         </div>
@@ -72,15 +72,15 @@
 
         <div id="btns-container">
             <div class="each-button-box">
-                <input id="rock" class="image-button" type="image" src="rpc-images/fist (button).png" width="150"></input>
+                <input id="rock" class="image-button" type="image" src="fist (button).png" width="150"></input>
             </div>
             
             <div class="each-button-box">
-                <input id="paper" class="image-button" type="image" src="rpc-images/palm (button).png" width="150">
+                <input id="paper" class="image-button" type="image" src="palm (button).png" width="150">
             </div>
 
             <div class="each-button-box">
-                <input id="scissors" class="image-button" type="image" src="rpc-images/scissors(button).png" width="140">
+                <input id="scissors" class="image-button" type="image" src="scissors(button).png" width="140">
             </div>
         </div>
 
